# secretbroker

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  deny.toml  skills.sh.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
assets/: secretbroker-widget.html
docs/: codex-desktop-plugin.md  releasing.md
scripts/: check-agent-package.mjs  check-release-version.mjs  stage-npm-platform.mjs
skills/secretbroker/: SKILL.md
skills/secretbroker/agents/: openai.yaml
skills/secretbroker/evals/: evals.json
skills/secretbroker/references/: security.md  workflow.md
specs/001-secretbroker-init/: plan.md  spec.md  tasks.md
src/: cli.rs  env_name.rs  lib.rs  main.rs  mcp.rs  metadata.rs  output.rs  paths.rs  pending.rs  runner.rs  scope.rs  secret.rs  skill.rs  storage.rs
src/collector/: mod.rs  terminal.rs  web.rs
tests/: mcp_stdio.rs
